@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-mysqlnd_ms/pecl-mysqlnd_ms-1.5.2-r1.ebuild,v 1.1 2014/09/30 18:56:14 grknight Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-mysqlnd_ms/pecl-mysqlnd_ms-1.5.2-r1.ebuild,v 1.2 2015/01/04 23:41:09 grknight Exp $
 
 EAPI=5
 
@@ -23,6 +23,10 @@ IUSE=""
 # Specifying targets due to USE flag transition
 DEPEND="
 	php_targets_php5-4? ( dev-lang/php:5.4[mysqlnd] )
-	php_targets_php5-5? ( dev-lang/php:5.5[-libmysqlclient] )
+	php_targets_php5-5? ( || (
+				 dev-lang/php:5.5[-libmysqlclient,mysql]
+				 dev-lang/php:5.5[-libmysqlclient,mysqli]
+				)
+			)
 "
 RDEPEND="${DEPEND}"
