@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=memcached? ( dev-libs/libmemcached ) sqlite? ( dev-db/sqlite:3 ) php_targets_php5-4? ( dev-lang/php:5.4[mysqlnd] ) php_targets_php5-5? ( dev-lang/php:5.5[-libmysqlclient] ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 >=sys-devel/m4-1.4.3 >=sys-devel/libtool-1.5.18 php_targets_php5-5? ( dev-lang/php:5.5 ) php_targets_php5-4? ( dev-lang/php:5.4 )
+DEPEND=memcached? ( dev-libs/libmemcached ) sqlite? ( dev-db/sqlite:3 ) php_targets_php5-4? ( dev-lang/php:5.4[mysqlnd] ) php_targets_php5-5? ( || ( dev-lang/php:5.5[-libmysqlclient,mysql] dev-lang/php:5.5[-libmysqlclient,mysqli] ) ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 >=sys-devel/m4-1.4.3 >=sys-devel/libtool-1.5.18 php_targets_php5-5? ( dev-lang/php:5.5 ) php_targets_php5-4? ( dev-lang/php:5.4 )
 DESCRIPTION=A query cache plugin for the mysqlnd library
 EAPI=5
 HOMEPAGE=http://pecl.php.net/mysqlnd_qc
 IUSE=memcached sqlite php_targets_php5-5 php_targets_php5-4
 KEYWORDS=~amd64
 LICENSE=PHP-3
-RDEPEND=memcached? ( dev-libs/libmemcached ) sqlite? ( dev-db/sqlite:3 ) php_targets_php5-4? ( dev-lang/php:5.4[mysqlnd] ) php_targets_php5-5? ( dev-lang/php:5.5[-libmysqlclient] ) php_targets_php5-5? ( dev-lang/php:5.5 ) php_targets_php5-4? ( dev-lang/php:5.4 )
+RDEPEND=memcached? ( dev-libs/libmemcached ) sqlite? ( dev-db/sqlite:3 ) php_targets_php5-4? ( dev-lang/php:5.4[mysqlnd] ) php_targets_php5-5? ( || ( dev-lang/php:5.5[-libmysqlclient,mysql] dev-lang/php:5.5[-libmysqlclient,mysqli] ) ) php_targets_php5-5? ( dev-lang/php:5.5 ) php_targets_php5-4? ( dev-lang/php:5.4 )
 REQUIRED_USE=|| ( php_targets_php5-5 php_targets_php5-4 )
 SLOT=0
 SRC_URI=http://pecl.php.net/get/mysqlnd_qc-1.2.0.tgz
 _eclasses_=autotools	c118b9a8e93bfef124f2d7a2fe56a95e	confutils	2ab69b52fa6ea0c0669a47fb94b354b4	eutils	f99a767f569b1f0731b3a1edd17c1d11	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	php-ext-pecl-r2	de1308bcf4fef59a8ee8793efc7c3051	php-ext-source-r2	39437168059a2166e012420b3ba12815	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=bf83064ec5399a30df58ef0f582a3880
+_md5_=aaea5bb67236130f690db65e85212734
