@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/pecl-mysqlnd_ms
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-mysqlnd_ms/ChangeLog,v 1.13 2014/10/10 02:01:58 grknight Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-mysqlnd_ms/ChangeLog,v 1.14 2015/01/04 23:41:09 grknight Exp $
+
+  04 Jan 2015; Brian Evans <grknight@gentoo.org>
+  pecl-mysqlnd_ms-1.5.2-r1.ebuild:
+  Fix dependencies wrt bug 531814
 
 *pecl-mysqlnd_ms-1.5.2-r1 (30 Sep 2014)
 
